--- a/Exercises/Exercises.vcxproj.filters
+++ b/Exercises/Exercises.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Creational">
+      <UniqueIdentifier>{e50a0836-7682-47d4-ab2e-7b5b72f9a771}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Exercises.cpp">
@@ -46,6 +49,9 @@
     </ClInclude>
     <ClInclude Include="Shared_Ptr.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectReturn.h">
+      <Filter>Creational</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
