--- a/Exercises/Exercises.vcxproj
+++ b/Exercises/Exercises.vcxproj
@@ -82,6 +82,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgEnabled>false</VcpkgEnabled>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -147,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="DependencyInversion.h" />
+    <ClInclude Include="FuncTemplate.h" />
     <ClInclude Include="InterfaceSegregation.h" />
     <ClInclude Include="LiskovSubstitution.h" />
     <ClInclude Include="ObjectReturn.h" />
